--- a/css/structure.css
+++ b/css/structure.css
@@ -42,10 +42,12 @@ div.handle_container span {
 }
 #bottom_menus {
   max-width: 100%;
-  max-height: 100%;
+  max-height: calc( 100% - 100px);
   position: fixed;
   bottom: 0;
+/*
   display: inline-table;
+*/
   left: 50%;
   transform: translateX(-50%);
 }
